ci: 添加 GitHub Actions 工作流配置
- 新增 CI 工作流，在推送到主分支或拉取请求时运行 Maven 构建和测试
- 新增 Release 工作流，在推送版本标签时自动创建 GitHub 发布
- 新增 CodeQL 工作流，定期进行代码安全分析
- 新增依赖审查工作流，在拉取请求时检查依赖安全性