@@ -2,90 +2,100 @@ package com.example.gitsqlrunner.application;
 
 import com.example.gitsqlrunner.domain.sql.TargetDatabase;
 import com.example.gitsqlrunner.domain.sql.TargetDatabaseRepository;
-import org.springframework.jdbc.datasource.DriverManagerDataSource;
+import com.example.gitsqlrunner.support.CompatText;
+import com.example.gitsqlrunner.support.ErrorMessageSupport;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.util.HashMap;
 import java.util.List;
-import java.util.Locale;
 import java.util.Map;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 public class TargetDbConfigService {
-  private static final List<String> SUPPORTED_TYPES = List.of("mysql", "postgresql");
   private final TargetDatabaseRepository repository;
+  private final TargetDbViewAssembler targetDbViewAssembler;
 
-  public TargetDbConfigService(TargetDatabaseRepository repository) {
+  public TargetDbConfigService(TargetDatabaseRepository repository, TargetDbViewAssembler targetDbViewAssembler) {
     this.repository = repository;
+    this.targetDbViewAssembler = targetDbViewAssembler;
   }
 
   public List<Map<String, Object>> listAll() {
-    return repository.findAll().stream().map(this::toMap).toList();
+    List<Map<String, Object>> result = repository.findAll().stream().map(targetDbViewAssembler::toView).collect(Collectors.toList());
+    log.info("target config list: count={}", result.size());
+    return result;
   }
 
   public Map<String, Object> create(TargetDbPayload payload) {
-    validatePayload(payload, null);
+    TargetDbPayload normalized = normalizePayload(payload, null);
     Instant now = Instant.now();
     TargetDatabase entity = new TargetDatabase(
       null,
-      payload.targetId().trim(),
-      payload.name().trim(),
-      payload.dbType().trim().toLowerCase(Locale.ROOT),
-      payload.host().trim(),
-      payload.port(),
-      payload.databaseName().trim(),
-      payload.username().trim(),
-      payload.password() == null ? "" : payload.password(),
-      normalizeJdbcParams(payload.jdbcParams()),
-      payload.enabled(),
+      normalized.targetId(),
+      normalized.name(),
+      normalized.dbType(),
+      normalized.host(),
+      normalized.port(),
+      normalized.databaseName(),
+      normalized.username(),
+      normalized.password(),
+      normalized.jdbcParams(),
+      normalized.enabled(),
       now,
       now
     );
     int id = repository.create(entity);
-    return repository.findById(id).map(this::toMap).orElseThrow();
+    log.info("target config created: id={}, targetId={}, dbType={}, host={}, port={}, databaseName={}, enabled={}",
+      id, entity.getTargetId(), entity.getDbType(), entity.getHost(), entity.getPort(), entity.getDatabaseName(), entity.isEnabled());
+    return repository.findById(id).map(targetDbViewAssembler::toView).orElseThrow(() -> new IllegalStateException("target created but not found: " + id));
   }
 
   public Map<String, Object> update(int id, TargetDbPayload payload) {
     TargetDatabase old = repository.findById(id).orElseThrow(() -> new IllegalArgumentException("target not found: " + id));
-    String nextPassword = payload.password() == null || payload.password().isBlank() ? old.getPassword() : payload.password();
-    TargetDbPayload normalized = new TargetDbPayload(
-      payload.targetId(), payload.name(), payload.dbType(), payload.host(), payload.port(),
-      payload.databaseName(), payload.username(), nextPassword, payload.jdbcParams(), payload.enabled()
-    );
-    validatePayload(normalized, id);
+    TargetDbPayload normalized = normalizePayload(payload, old);
     TargetDatabase next = new TargetDatabase(
       id,
-      normalized.targetId().trim(),
-      normalized.name().trim(),
-      normalized.dbType().trim().toLowerCase(Locale.ROOT),
-      normalized.host().trim(),
+      normalized.targetId(),
+      normalized.name(),
+      normalized.dbType(),
+      normalized.host(),
       normalized.port(),
-      normalized.databaseName().trim(),
-      normalized.username().trim(),
-      nextPassword,
-      normalizeJdbcParams(normalized.jdbcParams()),
+      normalized.databaseName(),
+      normalized.username(),
+      normalized.password(),
+      normalized.jdbcParams(),
       normalized.enabled(),
       old.getCreatedAt(),
       Instant.now()
     );
     repository.update(next);
-    return repository.findById(id).map(this::toMap).orElseThrow();
+    log.info("target config updated: id={}, targetId={}, dbType={}, host={}, port={}, databaseName={}, enabled={}",
+      id, next.getTargetId(), next.getDbType(), next.getHost(), next.getPort(), next.getDatabaseName(), next.isEnabled());
+    return repository.findById(id).map(targetDbViewAssembler::toView).orElseThrow(() -> new IllegalStateException("target updated but not found: " + id));
   }
 
   public void delete(int id) {
-    repository.findById(id).orElseThrow(() -> new IllegalArgumentException("target not found: " + id));
+    TargetDatabase targetDatabase = repository.findById(id).orElseThrow(() -> new IllegalArgumentException("target not found: " + id));
     repository.deleteById(id);
+    log.info("target config deleted: id={}, targetId={}, dbType={}, databaseName={}",
+      id, targetDatabase.getTargetId(), targetDatabase.getDbType(), targetDatabase.getDatabaseName());
   }
 
   public Map<String, Object> testConnection(TargetDbPayload payload) {
-    validatePayload(payload, null);
-    return testConnectionInternal(payload);
+    log.info("target config test start: targetId={}, dbType={}, host={}, port={}, databaseName={}",
+      payload.targetId(), payload.dbType(), payload.host(), payload.port(), payload.databaseName());
+    return testConnectionInternal(normalizePayload(payload, null));
   }
 
   public Map<String, Object> testConnectionById(int id) {
     TargetDatabase item = repository.findById(id).orElseThrow(() -> new IllegalArgumentException("target not found: " + id));
-    return testConnectionInternal(new TargetDbPayload(
+    log.info("target config test by id start: id={}, targetId={}, dbType={}, host={}, port={}, databaseName={}",
+      item.getId(), item.getTargetId(), item.getDbType(), item.getHost(), item.getPort(), item.getDatabaseName());
+    return testConnectionInternal(normalizePayload(new TargetDbPayload(
       item.getTargetId(),
       item.getName(),
       item.getDbType(),
@@ -96,97 +106,124 @@ public class TargetDbConfigService {
       item.getPassword(),
       item.getJdbcParams(),
       item.isEnabled()
-    ));
+    ), item));
   }
 
-  private void validatePayload(TargetDbPayload payload, Integer currentId) {
-    require(payload.targetId(), "targetId");
-    require(payload.name(), "name");
-    require(payload.dbType(), "dbType");
-    require(payload.host(), "host");
-    require(payload.databaseName(), "databaseName");
-    require(payload.username(), "username");
-    if (payload.port() == null || payload.port() <= 0) {
+  private TargetDbPayload normalizePayload(TargetDbPayload payload, TargetDatabase current) {
+    String targetId = TargetDbConnectionSupport.normalizeRequired(payload.targetId(), "targetId");
+    String name = TargetDbConnectionSupport.normalizeRequired(payload.name(), "name");
+    String dbType = TargetDbConnectionSupport.normalizeType(payload.dbType());
+    String host = TargetDbConnectionSupport.normalizeRequired(payload.host(), "host");
+    String databaseName = TargetDbConnectionSupport.normalizeRequired(payload.databaseName(), "databaseName");
+    String username = TargetDbConnectionSupport.normalizeRequired(payload.username(), "username");
+    if (payload.port() == null || payload.port().intValue() <= 0) {
+      log.warn("target config invalid port: targetId={}, port={}", targetId, payload.port());
       throw new IllegalArgumentException("port invalid");
     }
-    String dbType = payload.dbType().trim().toLowerCase(Locale.ROOT);
-    if (!SUPPORTED_TYPES.contains(dbType)) {
-      throw new IllegalArgumentException("dbType unsupported");
+    String password = CompatText.trimToNull(payload.password());
+    if (current != null && password == null) {
+      password = current.getPassword();
     }
-    repository.findByTargetId(payload.targetId().trim()).ifPresent(exist -> {
-      if (currentId == null || !exist.getId().equals(currentId)) {
+    String jdbcParams = TargetDbConnectionSupport.normalizeJdbcParams(payload.jdbcParams());
+    repository.findByTargetId(targetId).ifPresent(exist -> {
+      if (current == null || !exist.getId().equals(current.getId())) {
+        log.warn("target config duplicated targetId: targetId={}, currentId={}, existId={}",
+          targetId, current == null ? null : current.getId(), exist.getId());
         throw new IllegalArgumentException("targetId duplicated");
       }
     });
-  }
-
-  private static void require(String v, String field) {
-    if (v == null || v.trim().isEmpty()) throw new IllegalArgumentException(field + " required");
-  }
-
-  private static String normalizeJdbcParams(String jdbcParams) {
-    return jdbcParams == null || jdbcParams.isBlank() ? null : jdbcParams.trim();
-  }
-
-  private static String buildJdbcUrl(String type, String host, int port, String databaseName, String jdbcParams) {
-    String base = "mysql".equals(type)
-      ? "jdbc:mysql://" + host + ":" + port + "/" + databaseName
-      : "jdbc:postgresql://" + host + ":" + port + "/" + databaseName;
-    if (jdbcParams == null || jdbcParams.isBlank()) return base;
-    String params = jdbcParams.trim();
-    if (params.startsWith("?")) return base + params;
-    if (params.startsWith("&")) return base + "?" + params.substring(1);
-    return base + "?" + params;
+    return new TargetDbPayload(targetId, name, dbType, host, payload.port(), databaseName, username, password == null ? "" : password, jdbcParams, payload.enabled());
   }
 
   private static Map<String, Object> testConnectionInternal(TargetDbPayload payload) {
-    String dbType = payload.dbType().trim().toLowerCase(Locale.ROOT);
-    DriverManagerDataSource ds = new DriverManagerDataSource();
-    ds.setDriverClassName("mysql".equals(dbType) ? "com.mysql.cj.jdbc.Driver" : "org.postgresql.Driver");
-    ds.setUrl(buildJdbcUrl(dbType, payload.host().trim(), payload.port(), payload.databaseName().trim(), payload.jdbcParams()));
-    ds.setUsername(payload.username().trim());
-    ds.setPassword(payload.password() == null ? "" : payload.password());
-    Map<String, Object> result = new HashMap<>();
-    try (var con = ds.getConnection()) {
+    Map<String, Object> result = new HashMap<String, Object>();
+    try (java.sql.Connection con = TargetDbConnectionSupport.createDataSource(
+      payload.dbType(),
+      payload.host(),
+      payload.port(),
+      payload.databaseName(),
+      payload.username(),
+      payload.password(),
+      payload.jdbcParams()
+    ).getConnection()) {
       result.put("ok", true);
       result.put("message", "连接成功");
       result.put("dbProduct", con.getMetaData().getDatabaseProductName());
+      log.info("target config test success: targetId={}, dbType={}, host={}, port={}, databaseName={}, dbProduct={}",
+        payload.targetId(), payload.dbType(), payload.host(), payload.port(), payload.databaseName(), con.getMetaData().getDatabaseProductName());
       return result;
     } catch (Exception e) {
       result.put("ok", false);
-      result.put("message", e.getMessage() == null ? e.getClass().getSimpleName() : e.getMessage());
+      result.put("message", ErrorMessageSupport.safeMessage(e));
+      log.error("target config test failed: targetId={}, dbType={}, host={}, port={}, databaseName={}, error={}",
+        payload.targetId(), payload.dbType(), payload.host(), payload.port(), payload.databaseName(), result.get("message"), e);
       return result;
     }
   }
 
-  private Map<String, Object> toMap(TargetDatabase v) {
-    Map<String, Object> map = new HashMap<>();
-    map.put("id", v.getId());
-    map.put("targetId", v.getTargetId());
-    map.put("name", v.getName());
-    map.put("dbType", v.getDbType());
-    map.put("host", v.getHost());
-    map.put("port", v.getPort());
-    map.put("databaseName", v.getDatabaseName());
-    map.put("username", v.getUsername());
-    map.put("jdbcParams", v.getJdbcParams());
-    map.put("enabled", v.isEnabled());
-    map.put("createdAt", v.getCreatedAt() == null ? null : v.getCreatedAt().toString());
-    map.put("updatedAt", v.getUpdatedAt() == null ? null : v.getUpdatedAt().toString());
-    map.put("passwordSet", v.getPassword() != null && !v.getPassword().isBlank());
-    return map;
-  }
+  public static final class TargetDbPayload {
+    private final String targetId;
+    private final String name;
+    private final String dbType;
+    private final String host;
+    private final Integer port;
+    private final String databaseName;
+    private final String username;
+    private final String password;
+    private final String jdbcParams;
+    private final boolean enabled;
 
-  public record TargetDbPayload(
-    String targetId,
-    String name,
-    String dbType,
-    String host,
-    Integer port,
-    String databaseName,
-    String username,
-    String password,
-    String jdbcParams,
-    boolean enabled
-  ) {}
+    public TargetDbPayload(String targetId, String name, String dbType, String host, Integer port, String databaseName, String username, String password, String jdbcParams, boolean enabled) {
+      this.targetId = targetId;
+      this.name = name;
+      this.dbType = dbType;
+      this.host = host;
+      this.port = port;
+      this.databaseName = databaseName;
+      this.username = username;
+      this.password = password;
+      this.jdbcParams = jdbcParams;
+      this.enabled = enabled;
+    }
+
+    public String targetId() {
+      return targetId;
+    }
+
+    public String name() {
+      return name;
+    }
+
+    public String dbType() {
+      return dbType;
+    }
+
+    public String host() {
+      return host;
+    }
+
+    public Integer port() {
+      return port;
+    }
+
+    public String databaseName() {
+      return databaseName;
+    }
+
+    public String username() {
+      return username;
+    }
+
+    public String password() {
+      return password;
+    }
+
+    public String jdbcParams() {
+      return jdbcParams;
+    }
+
+    public boolean enabled() {
+      return enabled;
+    }
+  }
 }
